Add a scheduler job as a django command for testing. (#3)

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -25,5 +25,11 @@
       "src": "/(.*)",
       "dest": "server/wsgi.py"
     }
+  ],
+  "crons": [
+    {
+      "path": "/manage.py import_data",
+      "schedule": "59 1 * * *"
+    }
   ]
 }
