--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ psycopg2-binary = "^2.9.9"
 yfinance = "^0.2.31"
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.5.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
