--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,8 @@ repos:
       - id: isort
         name: isort (python)
         args: [--line-length=120, --profile=black]
+  # - repo: https://github.com/Lucas-C/pre-commit-hooks-java
+  #   rev: 1.3.10
+  #   hooks:
+  #     - id: validate-html
+  #       args: [--remove-mustaches]
