--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,11 @@ repos:
       - id: isort
         name: isort (python)
         args: [--line-length=120, --profile=black]
+  - repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.34.0
+    hooks:
+      - id: djlint-django
+
   # - repo: https://github.com/Lucas-C/pre-commit-hooks-java
   #   rev: 1.3.10
   #   hooks:
