--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,10 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: ^src/thirt-party/
       - id: check-yaml
       - id: check-added-large-files
+        exclude: ^src/thirt-party/
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
@@ -19,3 +21,13 @@ repos:
       - id: isort
         name: isort (python)
         args: [--line-length=120, --profile=black]
+  - repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.34.0
+    hooks:
+      - id: djlint-django
+
+  # - repo: https://github.com/Lucas-C/pre-commit-hooks-java
+  #   rev: 1.3.10
+  #   hooks:
+  #     - id: validate-html
+  #       args: [--remove-mustaches]
