--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 django = "^4.2.6"
 psycopg2-binary = "^2.9.9"
 yfinance = "^0.2.31"
+backtrader = "^1.9.78.123"
 
 
 [tool.poetry.group.dev.dependencies]
