--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.7.2 ; python_version >= "3.9" and python_version < "4.0"
+backtrader==1.9.78.123 ; python_version >= "3.9" and python_version < "4.0"
 beautifulsoup4==4.12.2 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.0 ; python_version >= "3.9" and python_version < "4.0"
