--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ django = "^4.2.6"
 psycopg2-binary = "^2.9.9"
 yfinance = "^0.2.31"
 backtrader = "^1.9.78.123"
-
+mysqlclient = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
