--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,6 +10,7 @@ html5lib==1.1 ; python_version >= "3.9" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
 lxml==4.9.3 ; python_version >= "3.9" and python_version < "4.0"
 multitasking==0.0.11 ; python_version >= "3.9" and python_version < "4.0"
+mysqlclient==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
 numpy==1.25.2 ; python_version >= "3.9" and python_version < "4.0"
 pandas==2.1.1 ; python_version >= "3.9" and python_version < "4.0"
 peewee==3.17.0 ; python_version >= "3.9" and python_version < "4.0"
