--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,9 @@ backtrader==1.9.78.123 ; python_version >= "3.9" and python_version < "4.0"
 beautifulsoup4==4.12.2 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.9" and python_version < "4.0"
 charset-normalizer==3.3.0 ; python_version >= "3.9" and python_version < "4.0"
+django-filter==23.3 ; python_version >= "3.9" and python_version < "4.0"
+django-htmx==1.17.0 ; python_version >= "3.9" and python_version < "4.0"
+django-tables2==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
 django==4.2.6 ; python_version >= "3.9" and python_version < "4.0"
 frozendict==2.3.8 ; python_version >= "3.9" and python_version < "4.0"
 html5lib==1.1 ; python_version >= "3.9" and python_version < "4.0"
