--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,18 @@ psycopg2-binary = "^2.9.9"
 yfinance = "^0.2.31"
 backtrader = "^1.9.78.123"
 mysqlclient = "^2.2.0"
+django-tables2 = "^2.6.0"
+django-filter = "^23.3"
+django-htmx = "^1.17.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
+
+[tool.pylint]
+disable = [
+    "C0115",
+    "R0903"
+]
 
 [build-system]
 requires = ["poetry-core"]
