--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ mysqlclient = "^2.2.0"
 django-tables2 = "^2.6.0"
 django-filter = "^23.3"
 django-htmx = "^1.17.0"
+mplfinance = "^0.12.10b0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
