--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         path: /src/
         remote_path: /home/dh_gr97s7/cr.controlederisco.com.br
         remote_host: klamathfalls.dreamhost.com
-        remote_user: cr_soccer
+        remote_user: dh_gr97s7
         remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     # Install any new dependencies from requirements.txt
@@ -39,7 +39,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: klamathfalls.dreamhost.com
-        username: cr_soccer
+        username: dh_gr97s7
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
@@ -53,7 +53,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: klamathfalls.dreamhost.com
-        username: cr_soccer
+        username: dh_gr97s7
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
@@ -65,7 +65,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: klamathfalls.dreamhost.com
-        username: cr_soccer
+        username: dh_gr97s7
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
