--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: 🔧 Collect static files
       uses: appleboy/ssh-action@master
-      envs:
+      env:
         DB_DATABASE: ${{ secrets.DB_DATABASE }}
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -69,7 +69,7 @@ jobs:
 
     # - name: 🔧 Migrate Database
     #   uses: appleboy/ssh-action@master
-    #   envs:
+    #   env:
     #     DB_DATABASE: ${{ secrets.DB_DATABASE }}
     #     DB_HOST: ${{ secrets.DB_HOST }}
     #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -87,7 +87,7 @@ jobs:
 
     - name: 🔧 Create .env file
       uses: appleboy/ssh-action@master
-      envs:
+      env:
         DB_DATABASE: ${{ secrets.DB_DATABASE }}
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -97,7 +97,7 @@ jobs:
         username: dh_gr97s7
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
-        envs: DB_DATABASE,DB_HOST,DB_PASSWORD,DB_USER
+        envs: DB_DATABASE, DB_HOST, DB_PASSWORD, DB_USER
         script: |
           cd /home/dh_gr97s7/cr.controlederisco.com.br
           rm -rf .env
