--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,6 +92,7 @@ jobs:
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         DB_USER: ${{ secrets.DB_USER }}
+        DB_ESPINDOLA: FERNANDO
       with:
         host: klamathfalls.dreamhost.com
         username: dh_gr97s7
@@ -105,3 +106,5 @@ jobs:
           echo DB_HOST="$DB_HOST" >> .env
           echo DB_PASSWORD="$DB_PASSWORD" >> .env
           echo DB_USER="${DB_USER}" >> .env
+          echo DB_fernandoe="${DB_ESPINDOLA}" >> .env
+          echo DB_espindola="$DB_ESPINDOLA" >> .env
