--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         username: dh_gr97s7
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
-        envs: DB_DATABASE, DB_HOST, DB_PASSWORD, DB_USER
+        envs: DB_DATABASE, DB_HOST, DB_PASSWORD, DB_USER, DB_ESPINDOLA
         script: |
           cd /home/dh_gr97s7/cr.controlederisco.com.br
           rm -rf .env
